Fixed min-width for index on small screens Another attempt at hiding browser bar on mobile

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -131,7 +131,7 @@
     color: var(--secondary-bg-color);
     border-bottom: 1px solid var(--primary-bg-color);
     text-decoration: none;
-    min-width: 100px;
+    min-width: 80px;
     text-align: center;
 }
 
